// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummarySection AllOutcomesSummarySection renders BaseSummarySection with all outcome types 1`] = `
<BaseSummarySection
  cardsViewData={{}}
  outcomeTypesShown={
    [
      "fail",
      "pass",
      "inapplicable",
    ]
  }
/>
`;

exports[`SummarySection BaseSummarySection: failure only 1`] = `
<DocumentFragment>
  <mock-basesummarysection
    cardsviewdata="[object Object]"
    outcometypesshown="pass"
  />
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: failures + not applicable + passes 1`] = `
<DocumentFragment>
  <mock-basesummarysection
    cardsviewdata="[object Object]"
    outcometypesshown="pass"
  />
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: failures + not applicable only 1`] = `
<DocumentFragment>
  <mock-basesummarysection
    cardsviewdata="[object Object]"
    outcometypesshown="pass"
  />
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: failures + passes only 1`] = `
<DocumentFragment>
  <mock-basesummarysection
    cardsviewdata="[object Object]"
    outcometypesshown="pass"
  />
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: not applicable + passes only 1`] = `
<DocumentFragment>
  <mock-basesummarysection
    cardsviewdata="[object Object]"
    outcometypesshown="pass"
  />
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: not applicable only 1`] = `
<DocumentFragment>
  <mock-basesummarysection
    cardsviewdata="[object Object]"
    outcometypesshown="pass"
  />
</DocumentFragment>
`;

exports[`SummarySection BaseSummarySection: passes only 1`] = `
<DocumentFragment>
  <mock-basesummarysection
    cardsviewdata="[object Object]"
    outcometypesshown="pass"
  />
</DocumentFragment>
`;

exports[`SummarySection PassFailSummarySection renders BaseSummarySection with only pass and failed outcome types 1`] = `
<BaseSummarySection
  cardsViewData={{}}
  outcomeTypesShown={
    [
      "fail",
      "pass",
    ]
  }
/>
`;
